--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       href="https://s.pageclip.co/v1/pageclip.css"
       media="screen"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     Test Form Site
@@ -19,8 +25,8 @@
       method="post"
     >
       <!-- Replace these inputs with your own. Make sure they have a "name" attribute! -->
-      <input type="text" name="name" value="Art Vandelay" />
-      <input type="email" name="email" value="avandelay@latex.com" />
+      <input type="text" name="name" placeholder="Art Vandelay" />
+      <input type="email" name="email" placeholder="avandelay@latex.com" />
 
       <!-- This button will have a loading spinner. Keep the inner span for best results. -->
       <button type="submit" class="pageclip-form__submit">
