--- a/index.html
+++ b/index.html
@@ -5,30 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <title>Test Form Site</title>
+    <link
+      rel="stylesheet"
+      href="https://s.pageclip.co/v1/pageclip.css"
+      media="screen"
+    />
   </head>
   <body>
     Test Form Site
-<<<<<<< HEAD
     <form
       action="https://send.pageclip.co/xrfCvjuNzDo7YY7tplRawwXyvEYzdYUo"
       class="pageclip-form"
       method="post"
     >
-      <br />
-      <form>
-        <label for="name">Name:</label>
-        <br />
-        <input type="text" name="name" id="name" placeholder="Art Vandelay" />
-        <br />
-        <label for="email">Email:</label>
-        <br />
-        <input
-          type="email"
-          name="email"
-          id="email"
-          placeholder="avandelay@latex.com"
-        />
-      </form>
+      <!-- Replace these inputs with your own. Make sure they have a "name" attribute! -->
+      <input type="text" name="name" placeholder="Art Vandelay" />
+      <input type="email" name="email" placeholder="avandelay@latex.com" />
 
       <!-- This button will have a loading spinner. Keep the inner span for best results. -->
       <button type="submit" class="pageclip-form__submit">
@@ -36,7 +29,5 @@
       </button>
     </form>
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
-=======
->>>>>>> parent of 865a10c (Add pageclip)
   </body>
 </html>
